# reqrep

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  LICENSE.txt  README.md  README_artifact.md  REQUIREMENTS.md  STATUS.md  main.py  major_todos.md  pyproject.toml
data/dummy/: dummy_000.csv  dummy_001.csv  dummy_002.csv  dummy_003.csv  dummy_004.csv
data/dummy2/: dummy_000.csv  dummy_001.csv  dummy_002.csv  dummy_003.csv  dummy_004.csv
data/traces/: TUI_0001.csv  TUI_0002.csv  TUI_0003.csv  TUI_0004.csv  TUI_0005.csv  reqs.txt
samples/: TUI_0003.csv  TUI_0004.csv  requirements.txt
scripts/: generate_dummy_data.py  list_requirements.m  manually_check_robustness.py  rq2rq3.py  tables.py
scripts/ScriptsRQ1/: MedianDesirability.csv  Table_Satis.csv  Table_Synt.csv  Test.m  countReqs.m  paretoScript.m  plotBoxplot.m  plotPareto_Old.m  plotScatter.m  repairNumber.csv
scripts/ScriptsRQ1/Figures/: Boxplot_Satis.eps  Boxplot_Semant.eps  Boxplot_Synt.eps  Pareto_AFC_1.eps  Pareto_AFC_2.eps  Pareto_AFC_3.eps  Pareto_AT_1.eps  Pareto_AT_2.eps  Pareto_AT_3.eps  Pareto_All_1.eps  Pareto_All_2.eps  Pareto_All_3.eps  Pareto_CC_1.eps  Pareto_CC_2.eps  Pareto_CC_3.eps  Pareto_EU_1.eps  Pareto_EU_2.eps  Pareto_EU_3.eps  Pareto_NNP_1.eps  Pareto_NNP_2.eps  Pareto_NNP_3.eps  Pareto_TUI_1.eps  Pareto_TUI_2.eps  Pareto_TUI_3.eps  Scatter_1.eps  Scatter_2.eps  Scatter_3.eps  Scatter_4.eps  Scatter_5.eps  Scatter_6.eps
scripts/ScriptsRQ1/ToolOutput/: results.csv
src/repair/: check.py  tester.py  trace.py  utils.py
src/repair/approach/: approach.py  approachConfig.py  (+3 more)
(+23 files in other folders)
